fix-icon-spacing

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -287,13 +287,10 @@ h2{
   font-size: 1.5rem;
 }
 
-.projects,
-.resume-section,
-.course-content {
-  background-color: black;
+.projects{
+  background: linear-gradient(180deg, black, black, #104345); 
   padding: 2rem;
   margin: 0 auto;
-  max-width: 1200px;
   padding-top: 0rem;
 }
 
@@ -440,6 +437,11 @@ header {
   padding: 20px;
 }
 
+.project-section{
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
 
 @media (max-width: 1000px) {
   .nav-items {
@@ -523,7 +525,16 @@ header {
   }
 
   .icon-image {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
+  }
+
+  .button{
+    padding: 0.5rem 1rem;
+    font-size: 0.7rem;
+  }
+  
+  .navb{
+    padding: 0 0;
   }
 }
